2005-12-16  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-selector-method: ?r): If no connection offer to
	start Slime.
	
	* swank.lisp (to-string): Handle errors from printing objects.
	Among other things makes the inspector more robust in the face of
	objects with unbound slots and print-methods that fail to cope.

2005-12-16  William Bland <doctorbill.news@gmail.com>

	Added hilighting of tetx which has been edited but not yet
	compilied.

	* slime.el (slime-display-edit-hilights): New variable.
	(slime-display-edit-face): New face.
	(slime-compile-file, slime-compile-defun, slime-compile-region):
	Remove edits overlay.
	(slime-remove-edits): New function.
	(slime-self-insert-command): New function.
	(slime-mode-hook): Rebind simple characters to
	slime-self-insert-command.

2005-12-07  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank-allegro.lisp (find-definition-in-file)
	(find-fspec-location, fspec-definition-locations): Allegro CL
	properly records all definitions made by arbitrary macros whose
	names start with "def".  Use excl::find-source-file and
	scm:find-definition-in-definition-group (rather than
	scm:find-definition-in-file) to find them.

	* slime.el (slime-load-file): Change the default to be the buffer
	file name with extension.  This is more convenient for files like
	.asd files that do not have the default source file extension.
	(slime-save-some-lisp-buffers, slime-update-modeline-package):
	Handle all files with major mode in slime-lisp-modes, not just
	lisp-mode.

2005-12-06  Juho Snellman <jsnell@iki.fi>

	* swank-sbcl.lisp (function-source-location,
	safe-function-source-location): Oops, define these functions also
	for the >0.9.6 case. Fixes broken sldb-show-source on SBCL 0.9.7.

2005-12-05  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-find-coding-system): Use check-coding-system
	only if it's actually fbound.

2005-11-22  Marco Monteiro <masmxx@gmail.com>
